# C-Pacman

./: .gitignore  CMakeLists.txt  README.md
assets/: level1.txt
src/: Animation.cpp  Animation.h  AnimationLibrarty.cpp  AnimationLibrary.h  AtlasRegion.h  BlinkyTargetStrategy.cpp  BlinkyTargetStrategy.h  ClydeTargetStrategy.cpp  ClydeTargetStrategy.h  Dir.h  DirectionalAnimation.h  Game.cpp  Game.h  GameState.h  GameView.cpp  GameView.h  Ghost.cpp  Ghost.h  GhostAnimationPack.h  GhostDirector.cpp  GhostDirector.h  GhostEnum.h  GhostState.h  GhostTargetStrategies.h  GreedyManhattanPathingStrategy.cpp  GreedyManhattanPathingStrategy.h  IAnimationResolver.h  IGhostTargetStrategy.h  IPathingStrategy.h  InkyTargetStrategy.cpp  InkyTargetStrategy.h  Level.cpp  Level.h  LevelConfig.h  Logger.cpp  Logger.h  MainMenu.cpp  MainMenu.h  Maze.cpp  Maze.h  (+24 more)
